infra/argo/applications/neo4j/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo4j-bolt-ingress
  namespace: neo4j
  annotations:
    external-dns.alpha.kubernetes.io/hostname: neo4j-bolt.dev.everycure.org
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # Specify that this is a TCP proxy
    nginx.ingress.kubernetes.io/tcp-services-configmap: "neo4j/tcp-services"
spec:
  ingressClassName: nginx
  rules:
  - host: "neo4j-bolt.dev.everycure.org"
